[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arguments = "0.7.2"
array2d = "0.3.2"
colorgrad = "0.6.2"
image = "0.25.1"
num = "0.4.2"
num-complex = "0.4.5"
png = "0.17.13"
rangemap = "1.5.1"
